[package]
name = "semver-cli"
version = "0.1.1-alpha.0"
authors = ["rickycodes <ricky.miller@gmail.com>"]
edition = "2018"
description = "A Rust CLI application for working with the semver specification"
license = "MIT"

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
semver = "0.9.0"
